The engine can now be played using a TurnManager

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ eframe = { version = "0.21.0", default-features = false, features = [
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
+rand = "0.8.5"
